# vecmap-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/: renovate.json5
.github/workflows/: ci.yml  release-please.yml  release-plz.yml
src/: keyed.rs  lib.rs  macros.rs  map.rs  set.rs  sorted_keyed.rs  sorted_map.rs  sorted_set.rs
src/keyed/: entry.rs  impls.rs  iter.rs  serde.rs
src/map/: entry.rs  impls.rs  iter.rs  mutable_keys.rs  serde.rs  slice.rs
src/map/slice/: impls.rs
src/set/: impls.rs  iter.rs  serde.rs  slice.rs
src/set/slice/: impls.rs
src/sorted_keyed/: impls.rs
src/sorted_map/: entry.rs  impls.rs  iter.rs  serde.rs
src/sorted_set/: impls.rs  iter.rs  serde.rs
tests/: deref.rs
