[package]
name = "vecmap-rs"
version = "0.1.13"
authors = ["Martin Ohmann <martinohmann@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A vector-based map and set implementation"
repository = "https://github.com/martinohmann/vecmap-rs"
documentation = "https://docs.rs/vecmap-rs/"
keywords = ["vector", "map", "set", "vec", "no-std"]
categories = ["data-structures", "no-std"]
readme = "README.md"
edition = "2021"
exclude = [
    ".github/",
]

[lib]
name = "vecmap"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
default-features = false
optional = true
version = "1.0"

[dev-dependencies]
serde_test = "1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
